<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_crear_gasto_ll_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.funebunny.xpdroid.main.ui.activity.CrearGastoActivity">

    <LinearLayout
        android:id="@+id/activity_crear_gasto_rl_importe"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/importe_sep1"></RelativeLayout>

        <EditText
            android:id="@+id/activity_crear_gasto_et_importe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:hint="@string/importe"
            android:inputType="numberDecimal"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:nextFocusDown="@+id/activity_crear_gasto_et_descripcion"
            style="@style/XPDroidEditTextImporte"/>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/importe_sep2"
            android:layout_weight="1"></RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_crear_gasto_rl_categoria"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/categoria_sep1"></RelativeLayout>

        <Spinner
            android:id="@+id/activity_crear_gasto_sp_categoria"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_weight="2"
            android:layout_gravity="center" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/categoria_sep2"></RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_crear_gasto_rl_fecha"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/fecha_sep1"
            android:layout_weight="1"></RelativeLayout>

        <EditText
            android:id="@+id/activity_crear_gasto_et_fecha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:ems="10"
            android:hint="@string/fecha"
            android:inputType="date"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:enabled="false"
            android:editable="false"
            android:clickable="false"
            android:onClick="mostrarDatePicker" />

        <ImageButton
            android:id="@+id/activity_crear_gasto_ib_date_picker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/activity_crear_gasto_et_fecha"
            android:layout_toEndOf="@+id/activity_crear_gasto_et_fecha"
            android:layout_toRightOf="@+id/activity_crear_gasto_et_fecha"
            android:src="@drawable/ic_calendar"
            android:onClick="mostrarDatePicker"
            android:layout_weight=".5"
            android:layout_gravity="center" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:id="@+id/fecha_sep2"></RelativeLayout>
        />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_crear_gasto_rl_descripcion"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/descripcion_sep1"></RelativeLayout>

        <EditText
            android:id="@+id/activity_crear_gasto_et_descripcion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:hint="@string/descripcion"
            android:layout_gravity="center"
            android:layout_weight="2"
            style="@style/XPDroidEditTextDescripcion" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/descripcion_sep2"></RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/activity_crear_gasto_rl_guardar"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/activity_crear_gasto_bt_guardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:onClick="guardarGasto"
            android:text="@string/guardar" />
    </RelativeLayout>
</LinearLayout>