<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="com.funebunny.xpdroid.main.ui.activity.CrearGastoFavoritoActivity"
    android:id="@+id/activity_crear_gasto_favorito_ll_main"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/activity_crear_gasto_favorito_rl_importe"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"></RelativeLayout>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/activity_crear_gasto_favorito_et_importe"
            android:layout_centerInParent="true"
            android:hint="@string/importe"
            android:layout_weight="2"
            style="@style/XPDroidEditTextImporte"
            android:layout_gravity="center" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"></RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/activity_crear_gasto_favorito_rl_categoria"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"></RelativeLayout>

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/activity_crear_gasto_favorito_sp_categoria"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_weight="2" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"></RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/activity_crear_gasto_favorito_rl_descripcion"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"></RelativeLayout>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/activity_crear_gasto_favorito_et_descripcion"
            android:layout_centerInParent="true"
            android:inputType="textCapSentences"
            android:hint="@string/descripcion"
            android:layout_weight="2"
            style="@style/XPDroidEditTextDescripcion"
            android:layout_gravity="center" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"></RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/activity_crear_gasto_favorito_rl_guardar"
        android:layout_weight="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guardar"
            android:id="@+id/activity_crear_gasto_favorito_bt_guardar"
            android:layout_centerInParent="true"
            android:onClick="guardarGastoFavorito" />
    </RelativeLayout>

</LinearLayout>
